--- a/UdemyStarterProj/01-starting-project/src/app/header.component.html
+++ b/UdemyStarterProj/01-starting-project/src/app/header.component.html
@@ -1,3 +1,7 @@
 <header>
+    <img src="../assets/task-management-logo.png" alt="A Todo List"/>
+    <div>
+        <p>Enterprise Gaming at the Highest Octane Skill Level</p>
+    </div>
     <h1>EasyTask</h1>
 </header>
